# morrowtools

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Contents.txt  Dockerfile  readme.md  zlib_info.txt
apps/mw/cell_translator/: CMakeLists.txt  ESMReaderTranslator.cpp  ESMReaderTranslator.hpp  TranslateRecords.cpp  TranslateRecords.hpp  TranslatorXML.hpp  cell_translator.cbp  cells.xml  main.cpp
apps/mw/data_cleaner/: CMakeLists.txt  DirectoryTraversal.cpp  DirectoryTraversal.hpp  ESMReaderCleaner.cpp  ESMReaderCleaner.hpp  data_cleaner.cbp  main.cpp  readme.txt
apps/mw/name_generator/: CMakeLists.txt  ESMReaderNameGen.cpp  ESMReaderNameGen.hpp  Gender.cpp  Gender.hpp  NameGenFunctions.cpp  NameGenFunctions.hpp  ToDo.txt  main.cpp  name_generator.cbp  readme.md
apps/mw/skill_rebalance/: CMakeLists.txt  ESMReaderSkillRebalance.cpp  ESMReaderSkillRebalance.hpp  ESMWriterSkillRebalance.cpp  ESMWriterSkillRebalance.hpp  main.cpp  skill_rebalance.cbp
apps/mw/spell_rename/: CMakeLists.txt  ESMReaderSpells.cpp  ESMReaderSpells.hpp  ESMWriterSpells.cpp  ESMWriterSpells.hpp  main.cpp  spell_rename.cbp
apps/sr/: CMakeLists.txt  readme.md
apps/sr/bsa_cli/: CMakeLists.txt  bsa-cli.cbp  changelog.md  main.cpp  readme.md  third-party.md
apps/sr/bsafs/: CMakeLists.txt  bsafs.cbp  bsafs.cpp  bsafs.hpp  changelog.md  main.cpp  readme.md  third-party.md
apps/sr/conv_cams/: CMakeLists.txt  ESMReaderConvCAMS.cpp  ESMReaderConvCAMS.hpp  conv_cams.cbp  main.cpp
apps/sr/formID_finder/: AuxFunctions.cpp  CMakeLists.txt  ESMReaderFinder.cpp  ESMReaderFinder.hpp  ESMReaderFinderReferences.cpp  ESMReaderFinderReferences.hpp  formID_finder.cbp  main.cpp  readme.md  searchable_records.txt  third-party.md
apps/sr/formID_finder_GUI/: .gitignore  finderguiudsserver.pas  formID_gui.lpi  formid_finder.lfm  formid_finder.lrs  formid_finder.pas  readme.md
apps/sr/small_high_elves/: CMakeLists.txt  main.cpp  small_high_elves.cbp
dev/mw-esm-io/: CMakeLists.txt  main.cpp  mw-esm-io.cbp  readme.md
dev/sr-esm-io/: CMakeLists.txt  main.cpp  readme.md  sr-esm-io.cbp
dev/zdeflate/: CMakeLists.txt  readme.md
dev/zinflate/: CMakeLists.txt  readme.md
mw/cell_translator/: CMakeLists.txt  ESMReaderTranslator.cpp  ESMReaderTranslator.h  ESMReaderTranslator.hpp  TranslateRecords.cpp  TranslateRecords.h  TranslateRecords.hpp  TranslatorXML.cpp  TranslatorXML.h  TranslatorXML.hpp  XMLParser.cpp  XMLParser.h  cell_translator.cbp  main.cpp
mw/cell_translator/doc/: readme_deutsch.txt
mw/data_cleaner/: CMakeLists.txt  DirectoryTraversal.cpp  DirectoryTraversal.h  DirectoryTraversal.hpp  ESMReaderCleaner.cpp  ESMReaderCleaner.h  ESMReaderCleaner.hpp  data_cleaner.cbp  main.cpp
mw/data_cleaner/doc/: readme_deutsch.txt
mw/skill_rebalance/: CMakeLists.txt  ESMReaderSkillRebalance.cpp  ESMReaderSkillRebalance.h  ESMReaderSkillRebalance.hpp  ESMWriterSkillRebalance.cpp  ESMWriterSkillRebalance.h  ESMWriterSkillRebalance.hpp  main.cpp  skill_rebalance.cbp
mw/spell_rename/: CMakeLists.txt  ESMReaderSpells.cpp  ESMReaderSpells.h  ESMReaderSpells.hpp  ESMWriterSpells.cpp  ESMWriterSpells.h  ESMWriterSpells.hpp  main.cpp  spell_rename.cbp
mw/spell_rename/doc/: readme_deutsch.tex  readme_deutsch.txt  readme_english.tex
sr/bsa_cli/: CMakeLists.txt  OperationInfo.cpp  OperationInfo.hpp  OperationList.cpp  OperationList.hpp  Operations.cpp  bsa-cli.cbp  changelog.md  main.cpp  readme.md
sr/bsa_cli/commands/: ArgumentParsingUtilities.cpp  ArgumentParsingUtilities.hpp  CheckHashes.cpp  CheckHashes.hpp  Command.hpp  CommandFactory.cpp  CommandFactory.hpp  Commands.cpp  Commands.hpp  Directories.cpp  Directories.hpp  DirectoryMetadata.cpp  ExtractAll.cpp  ExtractAll.hpp  ExtractDirectory.cpp  ExtractFile.cpp  ExtractFile.hpp  ExtractFolder.cpp  ExtractFolder.hpp  FileMetadata.cpp  Folders.cpp  Folders.hpp  Help.cpp  Help.hpp  Info.cpp  Info.hpp  List.cpp  List.hpp  Metadata.cpp  Metadata.hpp  Operations.cpp  Operations.hpp
sr/conv_cams/: CMakeLists.txt  ESMReaderConvCAMS.cpp  ESMReaderConvCAMS.h  ESMReaderConvCAMS.hpp  conv_cams.cbp  main.cpp
sr/formID_finder/: AuxFunctions.cpp  AuxFunctions.hpp  CMakeLists.txt  ChangeLog.de.md  ChangeLog.de.txt  ChangeLog.en.md  ChangeLog.en.txt  ESMReaderFinder.cpp  ESMReaderFinder.h  ESMReaderFinder.hpp  ESMReaderFinderReferences.cpp  ESMReaderFinderReferences.h  ESMReaderFinderReferences.hpp  formID_finder.cbp  main.cpp  readme.md  release_checksums.sha256  searchable_records.txt
sr/race_resize/: CMakeLists.txt  main.cpp  race_resize.cbp
tests/: CMakeLists.txt  locate_catch.hpp
tests/apps/: CMakeLists.txt
tests/apps/mw/: CMakeLists.txt
tests/apps/sr/: CMakeLists.txt  apps-sr-tests.cbp  main.cpp
tests/bench_script_compile/: .gitignore  CMakeLists.txt  CompileStatistics.cpp  CompileStatistics.hpp  bench_script_compile.cbp  main.cpp
tests/cell_reader/: ESMReaderCells.cpp  ESMReaderCells.hpp  cell_reader.cbp  main.cpp
tests/components/: CMakeLists.txt  component-tests.cbp  locate_catch.hpp  main.cpp
tests/components/base/: BufferStream.cpp  ByteBuffer.cpp  ComparisonFunctor.cpp  CompressionFunctions.cpp  DirectoryFunctions.cpp  FileFunctions.cpp  RandomFunctions.cpp  RegistryFunctions.cpp  SlashFunctions.cpp  UtilityFunctions.cpp  lz4Compression.cpp
tests/components/mw/: DepFile.cpp  DepFileList.cpp  (+4 more)
tests/hex2sv/: .gitignore  Cargo.toml  readme.md
tests/lib/: CMakeLists.txt  limited_streambuf.hpp  locate_catch.hpp
tests/lz4deframe/: CMakeLists.txt  functions.cpp  lz4deframe.cbp  readme.md
tests/lz4frame/: CMakeLists.txt  functions.cpp  functions.hpp  lz4frame.cbp
tests/mw/: CMakeLists.txt
tests/one_record_type_reader/: ESMReaderOneRecordType.cpp  ESMReaderOneRecordType.hpp  main.cpp  one_record_type_reader.cbp
tests/sr/: CMakeLists.txt
tests/zdeflate/: CMakeLists.txt  codes.hpp  functions.cpp  functions.hpp  main.cpp  readme.md  zdeflate.cbp
tests/zinflate/: CMakeLists.txt  codes.hpp  functions.cpp  functions.hpp  main.cpp  zinflate.cbp
win64-compile-test/: CMakeLists.txt  main.cpp  readme.md
(+2362 files in other folders)
